--- a/front/front.templ
+++ b/front/front.templ
@@ -18,7 +18,7 @@ templ grid(albums chan Album){
 								for alb := range albums {
 												@templ.Flush() {
 												<div class={ griditem }>
-				<img src={ alb.Cover } alt={ alb.Title } style="width:250px;height250px;"/>
+				<img src={ alb.Cover } alt={ alb.Title } style="width:250px;height:250px;"/>
 								<p>{ alb.Title } - { alb.Artist }</p>
 												</div>
 								}
