--- a/front/front.templ
+++ b/front/front.templ
@@ -13,19 +13,42 @@ css griditem() {
   text-align: center;
 }
 
+templ Page(){
+			<!DOCTYPE html>
+			<html lang="en">
+			<head>
+				<title>App</title>
+				<meta charset="UTF-8"/>
+  			<script src="https://unpkg.com/htmx.org@2.0.3"></script>
+			</head>
+			<body>
+			{ children... }
+			</body>
+			</html>
+}
+
 templ grid(albums chan Album){
+			@Page(){
 				<div class={ gridcontainer() }>
 								for alb := range albums {
 												@templ.Flush() {
 												<div class={ griditem }>
 				<img src={ alb.Cover } alt={ alb.Title } style="width:250px;height:250px;"/>
 								<p>{ alb.Title } - { alb.Artist }</p>
+								<p>
+  <button hx-post="/post" hx-swap="outerHTML">
+    Click Me
+  </button>
+	</p>
 												</div>
 								}
 								}
 				</div>
+			}
 }
 
 templ unavailable(msg string) {
+			@Page(){
 				<p>Unable to connect to database: { msg }</p>
+			}
 }
